@@ -6,6 +6,7 @@ History for IMDBPHP
 v1.1.5
 -------------------
 ! hopefully fixed "invalid stream resource" on some network timeouts
++ movie: added method to retrieve movie types (if specified)
 
 v1.1.4 (26.04.2009)
 -------------------
